[package]
name = "mobilecoind-buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
# third party
clap = { version = "4.1", features = ["derive", "env"] }
displaydoc = "0.2"
egui = "0.21"
eframe = { version = "0.21", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",
] }
grpcio = "0.13"
protobuf = "2.27.1"
rust_decimal = "1.28"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
# This is for egui's text logs
tracing-subscriber = "0.3"

# mobilecoin
mc-account-keys = { path = "deqs/mobilecoin/account-keys" }
mc-api = { path = "deqs/mobilecoin/api" }
mc-mobilecoind-api = { path = "deqs/mobilecoin/mobilecoind/api" }
mc-transaction-extra = { path = "deqs/mobilecoin/transaction/extra" }
mc-transaction-types = { path = "deqs/mobilecoin/transaction/types" }
mc-util-keyfile = { path = "deqs/mobilecoin/util/keyfile" }
mc-util-uri = { path = "deqs/mobilecoin/util/uri" }

# deqs
deqs-api = { path = "deqs/api" }

[patch.crates-io]
# Fork and rename to use "OG" dalek-cryptography with latest dependencies.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "9abfdc054d9ba65f1e185ea1e6eff3947ce879dc" }

# mbedtls patched to allow certificate verification with a profile
mbedtls = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "f82523478a1dd813ca381c190175355d249a8123" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "f82523478a1dd813ca381c190175355d249a8123" }

# Override lmdb-rkv for a necessary bugfix (see https://github.com/mozilla/lmdb-rs/pull/80)
lmdb-rkv = { git = "https://github.com/mozilla/lmdb-rs", rev = "df1c2f5" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "049bf9d30f3bbe072e2ad1b5eefdf0f3c851215e" }

# Fixes the following:
# * Allow enabling `serde/std` without also requiring `serde_cbor/std` to be enabled.
#   See: https://github.com/pyfisch/cbor/pull/198
serde_cbor = { git = "https://github.com/mobilecoinofficial/cbor", rev = "4c886a7c1d523aae1ec4aa7386f402cb2f4341b5" }
